@@ -1,3 +1,12 @@
+2008-02-08  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
+	* src/av-cp/renderer-combo.c:
+	* src/av-cp/renderer-controls.c:
+	* src/av-cp/renderer-controls.h:
+
+	Keep track of current track duration on each renderer, both in
+	renderer treemodel and renderer control UI.
+
 2008-02-04  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
 	* src/av-cp/renderer-combo.c:
